Fix for "ignore case" being off by default

--- a/html/delete-lines.html
+++ b/html/delete-lines.html
@@ -23,7 +23,7 @@
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-regex"></use>
         </svg>
       </button>
-      <button class="btn" data-bind="click: toggleIgnoreCase, css: { 'selected': ignoreCase }">
+      <button class="btn" data-bind="click: toggleIgnoreCase, css: { 'selected': !ignoreCase() }">
         <svg class="icon">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-case"></use>
         </svg>
